--- a/blocks/elements/__text/elements__text.css
+++ b/blocks/elements/__text/elements__text.css
@@ -3,18 +3,12 @@
   color: #000;
   margin: 0;
   padding: 0;
+  width: 100%;
+  max-width: 240px;
   font-weight: 900;
   font-size: 24px;
   line-height: 29px;
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
-}
-
-.elemetns__text::after {
-  content: "Новьё!"; /* Добавляемый текст */ 
-  color: #333; /* Цвет текста */ 
-  background-color: #fc0; /* Цвет фона */ 
-  font-size: 90%; /* Размер шрифта */ 
-  padding: 2px; /* Поля вокруг текста */
 }
