--- a/blocks/elements/elements.css
+++ b/blocks/elements/elements.css
@@ -1,4 +1,4 @@
-@import url(./__icon/elements__icon.css);
+@import url(./__button/elements__button.css);
 @import url(./__list-item/elements__list-item.css);
 @import url(./__list/elements__list.css);
 @import url(./__picture/elements__picture.css);
