--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -6,6 +6,7 @@
   padding: 34px 36px 36px;
   box-sizing: border-box;
   position: relative;
+  box-shadow: 0 0 25px rgba(0, 0, 0, .15);
 }
 
 @media screen and (max-width: 767px) {
