--- a/blocks/popup/__name/popup__name.css
+++ b/blocks/popup/__name/popup__name.css
@@ -1,4 +1,4 @@
-.popup__name {
+.popup__input {
   width: 100%;
   border: 0;
   border-bottom: 1px solid rgba(0, 0, 0, .2);
@@ -7,10 +7,10 @@
   padding-bottom: 13px;
 }
 
-.popup__name:focus {
+.popup__input:focus {
   outline: none;
 }
 
-.popup__name::placeholder {
+.popup__input::placeholder {
   color: #000;
 }
