--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -6,9 +6,11 @@
   background-repeat: no-repeat;
   background-position: 50% 50%;
   border: 2px solid #fff;
+  border-radius: 2px;
   margin-left: auto;
   padding: 0;
   transition: all .1s linear;
+  box-sizing: border-box;
 }
 
 .profile__add-button:hover {
