--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -7,9 +7,11 @@
   width: 24px;
   height: 24px;
   padding: 0;
-  margin: 0 0 0 14px;
+  margin: 0;
   box-sizing: border-box;
   transition: all .1s linear;
+  align-self: center;
+  grid-area: edit-button;
 }
 
 .profile__edit-button:focus {
@@ -21,8 +23,9 @@
   cursor: pointer;
 }
 
-@media screen and (max-width: 426px) {
+@media screen and (max-width: 767px) {
   .profile__edit-button {
-    margin: 0 0 0 5px;
+    width: 18px;
+    height: 18px;
   }
 }
