--- a/blocks/profile/__name/profile__name.css
+++ b/blocks/profile/__name/profile__name.css
@@ -5,15 +5,9 @@
   font-size: 42px;
   line-height: 1.33;
   color: #fff;
-  margin: 0 0 16px;
-  display: inline-block;
+  margin: 0;
   position: relative;
-}
-
-@media screen and (max-width: 1023px) {
-  .profile__name {
-    margin: 0 0 14px;
-  }
+  grid-area: name;
 }
 
 @media screen and (max-width: 767px) {
