--- a/blocks/elements/__container/elements__container.css
+++ b/blocks/elements/__container/elements__container.css
@@ -1,5 +1,7 @@
 .elements__container {
   display: flex;
   justify-content: space-between;
-  margin: 25px 21px 31px;
+  z-index: 2;
+  background-color: white;
+  padding: 25px 21px 31px;
 }
