--- a/blocks/elements/__picture/elements__picture.css
+++ b/blocks/elements/__picture/elements__picture.css
@@ -5,4 +5,11 @@
   z-index: 1;
   margin: 0;
   padding: 0;
+  transition: all .2s linear;
+}
+
+.elements__picture:hover {
+  cursor: pointer;
+  opacity: .6;
+  transform: scale(1.05);
 }
