--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -11,6 +11,7 @@
 
 @media screen and (max-width: 767px) {
   .popup__container {
-    max-width: 282px;
+    max-width: 240px;
+    padding: 30px 20px;
   }
 }
