--- a/blocks/popup/__save-button/popup__save-button.css
+++ b/blocks/popup/__save-button/popup__save-button.css
@@ -8,7 +8,8 @@
   font-weight: 400;
   padding: 13.66px 0 18.49px 0;
   border: none;
-  transition: all .1s linear;
+  transition: all .2s linear;
+  margin-top: 18px;
 }
 
 .popup__save-button:hover {
@@ -18,6 +19,9 @@
 
 @media screen and (max-width: 767px) {
   .popup__save-button {
-    width: 100%;
+    width: 200px;
+    margin-top: 6px;
+    font-size: 14px;
+    line-height: 17px;
   }
 }
