--- a/blocks/popup/__form/popup__form.css
+++ b/blocks/popup/__form/popup__form.css
@@ -1,4 +1,4 @@
-.popup__container {
+.popup__form {
   width: 100%;
   max-width: 430px;
   background-color: #fff;
@@ -7,10 +7,11 @@
   box-sizing: border-box;
   position: relative;
   box-shadow: 0 0 25px rgba(0, 0, 0, .15);
+  z-index: 3;
 }
 
 @media screen and (max-width: 767px) {
-  .popup__container {
+  .popup__form {
     max-width: 240px;
     padding: 30px 20px;
   }
