--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -2,10 +2,10 @@
   width: 100%;
   border: 0;
   border-bottom: 1px solid rgba(0, 0, 0, .2);
-  margin: 0 0 30px;
-  padding: 0;
-  padding-bottom: 13px;
+  margin: 0;
+  padding: 13px 0;
   transition: all .2 linear;
+  background-color: transparent;
 }
 
 .popup__input:focus {
