--- a/blocks/elements/__like-button/elements__like-button.css
+++ b/blocks/elements/__like-button/elements__like-button.css
@@ -1,6 +1,6 @@
 .elements__like-button {
   margin: 0;
-  padding: 0 0 0 25px;
+  padding: 15px;
   width: 20px;
   background-color: transparent;
   background-image: url(../../../images/heart.svg);
@@ -18,3 +18,4 @@
 .elements__like-button:focus {
   outline: none;
 }
+
