--- a/blocks/elements/__list-item/elements__list-item.css
+++ b/blocks/elements/__list-item/elements__list-item.css
@@ -2,6 +2,7 @@
   width: 282px;
   border-radius: 10px;
   overflow: hidden;
+  text-align: center;
   background-color: #fff;
   display: flex;
   flex-direction: column;
