--- a/blocks/popup/__image/popup__image.css
+++ b/blocks/popup/__image/popup__image.css
@@ -1,6 +1,14 @@
 .popup__image {
   max-width: 75vw;
   max-height: 75vh;
+  min-height: 50vh;
+  min-width: 50vw;
   margin: 0;
   z-index: 3;
+  border-radius: 5px;
+  background-color: #252525;
+  background-image: url('../../../images/Logo.svg');
+  background-position: center;
+  background-size: 80%;
+  background-repeat: no-repeat;
 }
