--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -5,6 +5,7 @@
   background-image: url(../../../images/plus.svg);
   background-repeat: no-repeat;
   background-position: 50% 50%;
+  background-size: 18px;
   border: 2px solid #fff;
   border-radius: 2px;
   margin-left: auto;
