--- a/src/blocks/elements/__delete-button/elements__delete-button.css
+++ b/src/blocks/elements/__delete-button/elements__delete-button.css
@@ -18,11 +18,12 @@
 
 .elements__delete-button:hover {
   cursor: pointer;
-  opacity: .6;
+  opacity: 0.6;
 }
 
 .elements__delete-button:focus {
   outline: none;
-  background-color: black;
+  background-color: #311578;
   border-radius: 5px;
+  opacity: 0.8;
 }
