--- a/src/blocks/elements/__like-button/elements__like-button.css
+++ b/src/blocks/elements/__like-button/elements__like-button.css
@@ -7,15 +7,14 @@
   background-repeat: no-repeat;
   background-position: 50% 50%;
   border: 0;
-  transition: all .2s ease-in;
+  transition: all 0.2s ease-in;
 }
 
 .elements__like-button:hover {
   cursor: pointer;
-  opacity: .6;
+  opacity: 0.6;
 }
 
 .elements__like-button:focus {
   outline: none;
 }
-
