--- a/src/blocks/header/header.css
+++ b/src/blocks/header/header.css
@@ -11,15 +11,14 @@
   display: block;
   border: 0;
   border-bottom: 1px solid #545454;
-  opacity: .7;
+  opacity: 0.7;
   padding-top: 40px;
   box-sizing: border-box;
 }
 
-
 @media screen and (max-width: 1023px) {
   .header {
-    border-bottom: 1px solid rgba(84, 84, 84, .7);
+    border-bottom: 1px solid rgba(84, 84, 84, 0.7);
     padding: 28px 27px 31px;
   }
   .header::after {
