--- a/src/blocks/heartbeat/heartbeat.css
+++ b/src/blocks/heartbeat/heartbeat.css
@@ -1,4 +1,4 @@
-@keyframes heartbeat{
+@keyframes heartbeat {
   0% {
     transform: scale(1);
   }
@@ -11,5 +11,5 @@
 }
 
 .heartbeat {
-  animation: heartbeat .2s ease-in 2;
+  animation: heartbeat 0.3s ease-in 2;
 }
