--- a/src/blocks/page/page.css
+++ b/src/blocks/page/page.css
@@ -3,7 +3,7 @@
 .page {
   color: white;
   background-color: #000;
-  font-family: 'Inter', Arial, sans-serif;
+  font-family: "Inter", Arial, sans-serif;
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
   -webkit-text-size-adjust: 100%;
