--- a/src/blocks/popup/__button/_disabled/popup__button_disabled.css
+++ b/src/blocks/popup/__button/_disabled/popup__button_disabled.css
@@ -2,10 +2,10 @@
   background-color: #fff;
   color: #000;
   border: 1px solid #000;
-  opacity: .2;
+  opacity: 0.2;
 }
 
 .popup__button_disabled:hover {
-  opacity: .2;
+  opacity: 0.2;
   cursor: default;
 }
