--- a/src/blocks/popup/__button/popup__button.css
+++ b/src/blocks/popup/__button/popup__button.css
@@ -9,11 +9,11 @@
   padding: 13.66px 0 18.49px 0;
   margin-top: 18px;
   border: none;
-  transition: all .2s linear;
+  transition: all 0.2s linear;
 }
 
 .popup__button:hover {
-  opacity: .8;
+  opacity: 0.8;
   cursor: pointer;
 }
 
