--- a/src/blocks/popup/__form/popup__form.css
+++ b/src/blocks/popup/__form/popup__form.css
@@ -6,7 +6,7 @@
   padding: 34px 36px 36px;
   box-sizing: border-box;
   position: relative;
-  box-shadow: 0 0 25px rgba(0, 0, 0, .15);
+  box-shadow: 0 0 25px rgba(0, 0, 0, 0.15);
   z-index: 3;
 }
 
