--- a/src/blocks/popup/__input/popup__input.css
+++ b/src/blocks/popup/__input/popup__input.css
@@ -1,10 +1,10 @@
 .popup__input {
   width: 100%;
   border: 0;
-  border-bottom: 1px solid rgba(0, 0, 0, .2);
+  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
   margin: 0;
   padding: 13px 0;
-  transition: all .2 linear;
+  transition: all 0.2 linear;
   background-color: transparent;
 }
 
@@ -13,5 +13,5 @@
 }
 
 .popup__input::placeholder {
-  color: #C4C4C4;
+  color: #c4c4c4;
 }
