--- a/src/blocks/profile/__add-button/profile__add-button.css
+++ b/src/blocks/profile/__add-button/profile__add-button.css
@@ -10,12 +10,12 @@
   border-radius: 2px;
   margin-left: auto;
   padding: 0;
-  transition: all .2s linear;
+  transition: all 0.2s linear;
   box-sizing: border-box;
 }
 
 .profile__add-button:hover {
-  opacity: .6;
+  opacity: 0.6;
   cursor: pointer;
 }
 
