--- a/src/blocks/profile/__edit-button/profile__edit-button.css
+++ b/src/blocks/profile/__edit-button/profile__edit-button.css
@@ -10,7 +10,7 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  transition: all .2s linear;
+  transition: all 0.2s linear;
   align-self: center;
   grid-area: edit-button;
 }
@@ -20,7 +20,7 @@
 }
 
 .profile__edit-button:hover {
-  opacity: .6;
+  opacity: 0.6;
   cursor: pointer;
 }
 
