--- a/src/blocks/profile/__info/profile__info.css
+++ b/src/blocks/profile/__info/profile__info.css
@@ -4,9 +4,9 @@
   grid-template-columns: 1fr 24px;
   column-gap: 17px;
   row-gap: 16px;
-  grid-template-areas: 
-  "name edit-button"
-  "job job"
+  grid-template-areas:
+    "name edit-button"
+    "job job";
 }
 
 @media screen and (max-width: 767px) {
