--- a/src/blocks/popup/__input-error/popup__input-error.css
+++ b/src/blocks/popup/__input-error/popup__input-error.css
@@ -2,7 +2,7 @@
   font-weight: 400;
   font-size: 12px;
   line-height: 15px;
-  color: #ff0000;
+  color: #f00;
   margin-top: 5px;
   opacity: 0;
   position: absolute;
