--- a/src/blocks/popup/__form/popup__form.css
+++ b/src/blocks/popup/__form/popup__form.css
@@ -12,7 +12,7 @@
 
 @media screen and (max-width: 767px) {
   .popup__form {
-    max-width: 240px;
+    max-width: 75vw;
     padding: 30px 20px;
   }
 }
