--- a/src/blocks/elements/__container/elements__container.css
+++ b/src/blocks/elements/__container/elements__container.css
@@ -1,6 +1,7 @@
 .elements__container {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   z-index: 2;
   background-color: white;
   padding: 25px 21px 31px;
