--- a/src/blocks/profile/__edit-button/profile__edit-button.css
+++ b/src/blocks/profile/__edit-button/profile__edit-button.css
@@ -8,7 +8,7 @@
   width: 24px;
   height: 24px;
   padding: 0;
-  margin: 0;
+  margin: 5px 0 0;
   box-sizing: border-box;
   transition: all 0.2s linear;
   align-self: center;
