--- a/src/blocks/popup/__button/popup__button.css
+++ b/src/blocks/popup/__button/popup__button.css
@@ -6,7 +6,7 @@
   font-size: 18px;
   line-height: 22px;
   font-weight: 400;
-  padding: 13.66px 0 18.49px 0;
+  padding: 14px 0;
   margin-top: 18px;
   border: none;
   transition: all 0.2s linear;
