--- a/src/blocks/elements/__picture/elements__picture.css
+++ b/src/blocks/elements/__picture/elements__picture.css
@@ -8,7 +8,7 @@
   margin: 0;
   border: none;
   box-sizing: border-box;
-  transition: all 0.2s linear;
+  transition: all 0.2s ease-in;
   background: rgb(115, 160, 223);
   background: url("../../../images/Logo-white.svg"), linear-gradient(180deg, rgba(115, 160, 223, 1) 0%, rgba(77, 79, 163, 0.9) 50%, rgba(49, 21, 120, 0.9) 100%);
   background-size: 50%, contain;
@@ -19,5 +19,6 @@
 
 .elements__picture:hover {
   cursor: pointer;
-  opacity: 0.6;
+  opacity: 0.8;
+  transform: scale(1.1);
 }
