--- a/src/blocks/profile/__avatar-edit/profile__avatar-edit.css
+++ b/src/blocks/profile/__avatar-edit/profile__avatar-edit.css
@@ -13,3 +13,10 @@
   visibility: visible;
   opacity: 1;
 }
+
+
+@media screen and (max-width: 1023px) {
+  .profile__avatar-edit {
+    margin: 0 0 14px;
+  }
+}
