--- a/src/blocks/elements/__delete-button/elements__delete-button.css
+++ b/src/blocks/elements/__delete-button/elements__delete-button.css
@@ -13,7 +13,7 @@
   background-repeat: no-repeat;
   background-position: 50% 50%;
   border: 0;
-  transition: all 0s linear;
+  transition: all .1s linear;
 }
 
 .elements__delete-button:hover {
@@ -23,7 +23,5 @@
 
 .elements__delete-button:focus {
   outline: none;
-  background-color: #311578;
-  border-radius: 5px;
   opacity: 0.8;
 }
