--- a/src/blocks/elements/__like-button/elements__like-button.css
+++ b/src/blocks/elements/__like-button/elements__like-button.css
@@ -9,7 +9,7 @@
   background-position: 50%;
   background-size: contain;
   border: 0;
-  transition: all 0.2s ease-in;
+  transition: all .1s ease-in;
 }
 
 .elements__like-button:hover {
