--- a/src/blocks/profile/__add-button/profile__add-button.css
+++ b/src/blocks/profile/__add-button/profile__add-button.css
@@ -10,7 +10,7 @@
   border-radius: 2px;
   margin-left: auto;
   padding: 0;
-  transition: all 0.2s linear;
+  transition: all .1s linear;
   box-sizing: border-box;
 }
 
