--- a/src/blocks/profile/__edit-button/profile__edit-button.css
+++ b/src/blocks/profile/__edit-button/profile__edit-button.css
@@ -10,7 +10,7 @@
   padding: 0;
   margin: 5px 0 0;
   box-sizing: border-box;
-  transition: all 0.2s linear;
+  transition: all .1s linear;
   align-self: center;
   grid-area: edit-button;
 }
