--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -1,5 +1,7 @@
 @import url(../vendor/normalize.css);
 @import url(../vendor/fonts.css);
+@import url(../blocks/rotation/rotation.css);
+@import url(../blocks/spinner/spinner.css);
 @import url(../blocks/page/page.css);
 @import url(../blocks/heartbeat/heartbeat.css);
 @import url(../blocks/content/content.css);
