--- a/src/blocks/popup/__button/popup__button.css
+++ b/src/blocks/popup/__button/popup__button.css
@@ -19,7 +19,7 @@
 
 @media screen and (max-width: 767px) {
   .popup__button {
-    width: 200px;
+    width: 100%;
     font-size: 14px;
     line-height: 17px;
   }
