--- a/src/blocks/profile/__avatar/profile__avatar.css
+++ b/src/blocks/profile/__avatar/profile__avatar.css
@@ -2,5 +2,10 @@
   width: 120px;
   height: 120px;
   border-radius: 50%;
+  background: #000;
+  background-image: url("../../../images/Logo-white.svg");
+  background-size: 50%, contain;
+  background-repeat: no-repeat;
+  background-position: center;
   object-fit: cover;
 }
