--- a/src/blocks/elements/__delete-button/elements__delete-button.css
+++ b/src/blocks/elements/__delete-button/elements__delete-button.css
@@ -14,6 +14,7 @@
   background-position: 50% 50%;
   border: 0;
   transition: all .1s linear;
+  display: none;
 }
 
 .elements__delete-button:hover {
