--- a/src/blocks/elements/elements.css
+++ b/src/blocks/elements/elements.css
@@ -1,5 +1,6 @@
 @import url(./__like-button/elements__like-button.css);
 @import url(./__delete-button/elements__delete-button.css);
+@import url(./__delete-button/_active/elements__delete-button_active.css);
 @import url(./__list-item/elements__list-item.css);
 @import url(./__list/elements__list.css);
 @import url(./__picture/elements__picture.css);
