--- a/src/blocks/profile/__info/profile__info.css
+++ b/src/blocks/profile/__info/profile__info.css
@@ -3,6 +3,7 @@
   display: grid;
   align-items: baseline;
   grid-template-columns: 1fr 24px;
+  margin-right: 15px;
   column-gap: 17px;
   row-gap: 16px;
   grid-template-areas:
@@ -15,5 +16,6 @@
     grid-template-columns: 1fr 18px;
     column-gap: 7px;
     row-gap: 14px;
+    margin-right: 0;
   }
 }
