--- a/main.css
+++ b/main.css
@@ -48,7 +48,7 @@
 .popup__input-error{font-weight:400;font-size:12px;line-height:15px;color:red;margin-top:5px;opacity:0;position:absolute;top:100%;left:0;transition:.3s}
 .popup__input-error_visible{opacity:1}
 .popup__form-field{position:relative;display:flex;flex-direction:column;margin:0 0 30px}
-.popup{width:100%;height:100%;position:fixed;z-index:3;justify-content:center;align-items:center;visibility:hidden;opacity:0;transition:all .2s linear;display:flex}.popup__overlay{position:absolute;width:100%;height:100%;background-color:rgba(0,0,0,.5)}
+.popup{width:100%;height:100%;position:fixed;z-index:3;justify-content:center;align-items:center;display:flex;visibility:hidden;opacity:0;transition:all .2s linear}.popup__overlay{position:absolute;width:100%;height:100%;background-color:rgba(0,0,0,.5)}
 .popup_opened{visibility:visible;opacity:1}
 
 
